# weaveintel

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  ADMIN_PAGE_WIRING_AUDIT.md  ARTIFACTS_ROADMAP_2026.md  CACHE_PACKAGE_REVIEW_AND_ROADMAP_2026.md  CAPABILITY_MAP_NOTION_DRAFT.md  CHANGELOG.md  CLIENT_PACKAGE_REVIEW_AND_ROADMAP_2026.md  CODEBASE_AUDIT_2026.md  CODEBASE_REVIEW.md  CODE_OF_CONDUCT.md  COLLABORATION_PACKAGE_REVIEW_AND_ROADMAP_2026.md  CONTRIBUTING.md  DB_CONTENT_AUDIT_MID2026.md  Dockerfile  FINDINGS.md  GENEWEAVE_AUTH_RECOMMENDATIONS.md  GENEWEAVE_UI_REBUILD_PLAN_2026.md  IMPLEMENTATION_PLAN.md  LICENSE  LIVE_AGENTS_IMPLEMENTATION_AUDIT.md  MIGRATION.md  MODULARITY_REFACTOR_2026.md  NOTES_CRDT_AND_ARTIFACTS_ROADMAP_2026.md  NPM_CONSUMER_INTEGRATION.md  OAUTH_IMPLEMENTATION.md  OAUTH_SETUP.md  PERSISTENCE_ARCHITECTURE_REVIEW_2026.md  PHASE_7_VALIDATION_REPORT.md  Procfile  README.md  REFACTORING_COMPLETE.md  RESTRUCTURE_REPORT.md  ROADMAP.md  SECURITY.md  SERVICENOW_ROADMAP.md  SKILLS_MID2026_REVIEW_AND_ROADMAP.md  VERSIONING.md  (+17 more)
.changeset/: README.md  config.json  memory-live-agents-shared-pool.md  open-core-restructure.md  persistence-phase2-shared-postgres.md  persistence-postgres-slot-contract.md  phase3-reference-postgres-adapters.md  phase4-drizzle-all-workflow-stores.md  phase4-drizzle-checkpoint-store.md  phase4-drizzle-live-agents.md  phase4-drizzle-triggers-memory.md  realm-phase1.md  (+6 more)
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/src/: main.rs
(+1654 files in other folders)
