[package]
name = "geneweave-desktop"
version = "1.0.0"
description = "geneWeave desktop shell (Tauri v2) — global quick-capture, offline notes cache, native menus, auto-update"
authors = ["weaveIntel"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "geneweave_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds where the updater is enabled.
custom-protocol = ["tauri/custom-protocol"]
